namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: development
  labels:
    name: development
