tomcat-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-world
  namespace: default
  labels:
    app: tomcat
  annotations:
    deployment.kubernetes.io/revision: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      volumes:
        - name: hello-world-nfs
          persistentVolumeClaim:
            claimName: hello-world-claim
      containers:
        - name: tomcat
          image: tomcat:7-jre7
          command: ["/bin/sh", "-c"]
          args:
            - /bin/mkdir -p /usr/local/tomcat;
              /usr/bin/curl -ko /usr/local/tomcat/webapps/ROOT.war https://sa1x-spacewalk-p1.harlandclarke.local/pub/hello-world/ROOT.war;
              /usr/local/tomcat/bin/catalina.sh run;
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: hello-world-nfs
              mountPath: "/usr/local/tomcat/webapps"
