tomcat-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hw.harlandclarke.local
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world
              servicePort: 8080
